--- a/lib/bower.json
+++ b/lib/bower.json
@@ -1,9 +1,9 @@
 {
   "name": "lib",
   "version": "0.0.0",
-  "homepage": "https://github.com/mikeulvila/home_goods_r_us",
+  "homepage": "https://github.com/andrialexandrou/musichistory",
   "authors": [
-    "Carmen <vazquecm@gmail.com>"
+    "Andri Alexandrou <andri.j.alexandrou@gmail.com>"
   ],
   "license": "MIT",
   "ignore": [
@@ -16,6 +16,7 @@
   "dependencies": {
     "bootstrap": "~3.3.5",
     "jquery": "~2.1.4",
+    "require-handlebars-plugin": "~1.0.0",
     "requirejs": "~2.1.20"
   }
 }
